syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.edumatt3";
option java_outer_classname = "Protobuf";
option objc_class_prefix = "HLW";

package br.com.edumatt3;

import "google/protobuf/timestamp.proto";

service EmployeeService{

  rpc register(EmployeeRequest) returns (EmployeeResponse) {}

}

enum Role {
  DEV = 0;
  QA = 1;
  MANAGER = 2;
}

message EmployeeRequest {
  string name = 1;
  string cpf = 2;
  int32 age = 3;
  double wage = 4;
  bool isActive = 5;
  Role role = 6;

  message Address {
    string  street = 1;
    string zipcode = 2;
    string complement = 3;
  }

  repeated Address addresses = 7;
}

message EmployeeResponse {
  string name = 1;
  google.protobuf.Timestamp createdAt = 2;
}